feat: add v3.local, v3.public, and v4.public
BREAKING CHANGE: Node.js runtime version v16.0.0 or greater is now required

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "sign",
     "v1",
     "v2",
+    "v3",
+    "v4",
     "verify"
   ],
   "homepage": "https://github.com/panva/paseto",
@@ -40,7 +42,7 @@
     "standard": "^16.0.3"
   },
   "engines": {
-    "node": "^12.19.0 || >=14.15.0"
+    "node": ">=16.0.0"
   },
   "ava": {
     "files": [
